CHANGES
=======

* Travis debug
* Fix
* Fix
* Added: 'on\_failure\_even\_if\_security\_violation' for health checks and 'verify\_ssh\_fingerprint'
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis ci test
* Travis debug
* Updated dependencies
* Updated dependencies
* Updated dependencies
* Added test travis configuration file
* Updated gitignore
* Early version