@@ -26,7 +26,6 @@ test_vagrant_volume:
     checksum_files:
         sh: '/bin/sh'
         bash: '/bin/bash'
-        losetup: '$(whereis losetup|awk "{print \$2}")'
 
     healthchecks:
         - command: "ps aux |grep SOOOMETHING"
